<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/controller"
        android:icon="@drawable/wiimote"
        android:title="@string/controller"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/wiimote"
                android:title="@string/wiimote" />
            <item
                android:id="@+id/wiiupro"
                android:title="@string/wiiupro" />
            <item
                android:id="@+id/wiisync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/wiisync" />
        </menu>
    </item>

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_baseline_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />
</menu>